Removed com.carrotsearch.randomizedtesting.RandomizedRunner from integrationTest
Signed-off-by: Nils Bandener <nils.bandener@eliatra.com>